--- a/app/views/students/contact.html.erb
+++ b/app/views/students/contact.html.erb
@@ -4,21 +4,22 @@
 </head>
 
 <body>
-    <h3 id="title-tutor"><img id= "contact-tutor" src="http://icons.iconarchive.com/icons/martz90/hex/256/email-2-icon.png" height="46" width="46"> Contact your teacher </h3> 
+    <h2 id="title-tutor"><img id= "contact-tutor" src="/images/email.png" height="46" width="46"> Contact your teacher </h2> 
 
   <hr>
 
+<div class="contact-info">
   <% @tutors.each do |tutor| %>
   <p>
   	<table id="tutor-table">
 
-      <td><img id="tutor-profile" width="100px" height="100px" src="https://avatars3.githubusercontent.com/u/11841774?v=3&s=460"></td>
+      <td><img id="tutor-profile" width="100px" height="100px" src="/images/teacher_profile.jpg"></td>
 
     <th> Contact info </th>
   		<td><%= tutor.name %></td>
   		<td>Email: <%= tutor.email %></td>
       <td>
-        <div id="email-button" align="center"><a href="mailto:dnavarroefl@hotmail.com"><img width="46"height="46" src="http://icons.iconarchive.com/icons/martz90/hex/256/email-2-icon.png"></a></div>Send Email</td>
+        <div id="email-button" align="center"><a href="mailto:dnavarroefl@hotmail.com"><img width="46"height="46" src="/images/email.png"></a></div>Send Email</td>
       <td>
         <script type="text/javascript" src="http://www.skypeassets.com/i/scom/js/skype-uri.js"></script>
             <div id="SkypeButton_Call_deivy.mc_1">
@@ -33,8 +34,33 @@
         </div>      
       </td>
   	</table>
+</div>
 
   <% end %>
+
+  <h3 id="feedback-title"> Feedback </h3><br>
+
+<%= form_for :comment, url: comments_path do |f| %>
+
+  <p>
+    <%= f.label :title %><br>
+    <%= f.text_field :title %>
+  </p>
+
+  <p>
+    <%= f.label :name %><br>
+    <%= f.text_field :name %>
+  </p>
+ 
+  <p>
+    <%= f.label :text %><br>
+    <%= f.text_area :text %>
+  </p>
+ 
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %>
 
   <script type="text/javascript" src="http://cdn.dev.skype.com/uri/skype-uri.js"></script>
 
