--- a/app/views/students/home.html.erb
+++ b/app/views/students/home.html.erb
@@ -5,51 +5,68 @@
 
 <body>
 
+  <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v2.3";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+    </script>
+  
+
 <div class ="container">
-      <div class="page-header">
-        <h1>TEFL Platform <br>
-            <small> Educative platform for teachers and students fostering English learning. </small></h1>
-        </div>
+    <div class="header-img">
+      <!--<img src="/images/tefl_logo.jpg" width:"16" height:"16" class="img-responsive" alt="Responsive image">-->
+    </div>
+          <h1 id="platform-name">TEFL Platform</h1> <br>
+   <p class="motto">Educative platform for teachers and students fostering English learning.</p>
+<div>
+
+<hr>
 
 <article>
-    	<span id="recent-posts-header">
-           <h3> Recent Posts </h3>
-      </span>
+<h3 class= "recent-posts-header"><img id="messages-logo" src="/images/messages.png" height="46" width="46"> Recent Posts </h3>
 
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-12">
+      <div id="posts-content">
       <table> 
-        <div id="posts-content">
-           <% @posts.each do |post| %> 
-          <tr>
-            <td><b><%= post.name %></b></td>
-          </tr>
-          <tr>
-            <td><%= post.title %></td>
-          <tr>
-             <td>Posted on <%= post.created_at.mday %>/<%= post.created_at.month %>/<%= post.created_at.year %>
-            </td>
+        
+               <% @posts.each do |post| %> 
 
-          </tr>
-          </tr>
-          <tr>
-            <td><%= post.text %></td>
-          </tr>  
-          <tr>  
-            <td><button type='button' id='like-button'> Like </button></td>
-                                      <td id="likes"></td>
-          </tr>
-               <% end %>
+              <tr>
+                <th><h4 id="post-title"><%= post.title %><h4></th>
+              </tr>
+              <tr>
+                <td>By: <b><%= post.name %></b></td>
+              </tr>
+              <tr>  
+                <td>Posted on: <%= post.created_at.mday %>/<%= post.created_at.month %>/<%= post.created_at.year %>
+                </td>
+              </tr>
+              <tr>
+              
+                <td><%= post.text %></td>
+              </tr> 
+                   <% end %>
           </table>
+         </div>
         </div>
+      </div>
+
       </div>
 
     <ul class="pager">
       <li><a href="/posts">Show all</a></li>
     </ul>
+  </div>
 
-        <table id="post-comments">
+<div class="fb-comments" data-href="http://localhost:3000/home" data-numposts="5"></div>
+
+    <!--<table id="post-comments">
         <tr>
           <%= form_for :post, url: posts_path do |f| %>
 
@@ -79,9 +96,10 @@
             </tr>
 
              <% end %>
-              <table>    
-</div>
-	
+              <table> 
+              -->   
+</article>
+
 	 <script type="text/javascript">
 
         $('button#like-button').on('click', function() {
