--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,18 +1,25 @@
 
 <div id="teachers-header">	
-	<h3 id="teachers-title"><img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/bookmark-icon.png" height="46" width="46">  Teachers' Index </h3>
+	<h2 id="teachers-title"><img id="teachers" src="/images/teachers.png" height="46" width="46">  Teachers' Index </h2> <h4 id="teachers-title2">Teacher training and management of your class</h4>
+</div>
+
+<div class="management-links">
+	<ul class="pager">
+	    <li><a href="/tutors">Class Interaction</a></li>
+			<li><a href="/duolingo/dashboard">Duolingo Dashboard</a></li>
+			<li><a href="/busyteacher">Find your Worksheet</a></li>
+	<ul>
 </div>
 
 <hr>
-<div id="home-link"><img id="student" src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="36" width="36"> 
-	<%= link_to 'Class Interaction', controller: "tutors", action:"index" %> / 
-	<a href="/duolingo/dashboard">Duolingo Dashboard</a><img id="tools" src="http://icons.iconarchive.com/icons/martz90/hex/256/duolingo-icon.png" height="36" width="36">
-</div>
+
+		   <div id="issuu-reading" data-configid="3007336/13454019" style="width:525px; height:371px;" class="issuuembed"></div><script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script> 
 
 <hr>
-        <h3 id="teachers-title2">Training</h3>
-    </header>
-     
-   <div id="issuu-reading" data-configid="3007336/13454019" style="width:525px; height:371px;" class="issuuembed"></div><script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script> 
 
+<div id="pager-edit">
+	<ul class="pager">
+	      <li><a href="/home">Back</a></li> 
+	 </ul>
 </div>
+
