--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Users</h1>
+<h2 id="student-title">Listing Users</h2>
 
 <table>
   <thead>
@@ -28,4 +28,8 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<div id="pager-edit">
+  <ul class="pager">
+        <li><a href="/users/new">New User</a></li> 
+   </ul>
+</div>
