--- a/app/views/answers/new.html.erb
+++ b/app/views/answers/new.html.erb
@@ -1,4 +1,6 @@
-<h1> New Answer </h1>
+<h1 id="students-wall"> Reply your classmate/teacher</h1>
+
+<hr>
 
 <%= form_for :answer, url: answers_path do |f| %>
 
@@ -22,4 +24,6 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', answers_path%>
+<ul class="pager">
+  <li><a href="answers/new">Back</a></li>
+</ul>
