--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,44 +5,50 @@
 
 <body>
 
-      <span id="recent-posts-header">
-       <h3 id="post-title"> Recent Posts </h3>
-      </span>
+<article>
+<h2 class= "recent-posts-header"><img id="messages-logo" src="/images/messages.png" height="46" width="46"> Recent Posts </h2>
 
-      <hr>
+<hr>
 
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-12">
       <table> 
         <div id="posts-content">
-        	 <% @posts.each do |post| %> 
-        	<tr>
-            <td><b><%= post.name %></b></td>
-          </tr>
-          <tr>
-            <td><%= post.title %></td>
-          </tr>
-           <tr>
-             <td>Posted on <%= post.created_at.mday %>/<%= post.created_at.month %>/<%= post.created_at.year %>
-            </td>
-          </tr>
-          <tr>
-        		<td><%= post.text %></td>
-          </tr>
-          <tr>  
-            <td><button type='button' id='like-button'> Like </button></td>
-                                      <td id="likes"></td>
-        	</tr>
+               <% @posts.each do |post| %> 
 
-        	<% end %>
+              <tr>
+                <th><h4 id="post-title"><%= post.title %><h4></th>
+              </tr>
+              <tr>
+                <td>By: <b><%= post.name %></b></td>
+              </tr>
+              <tr>  
+                <td>Posted on: <%= post.created_at.mday %>/<%= post.created_at.month %>/<%= post.created_at.year %>
+                </td>
+              </tr>
+              <tr>
+              
+                <td><%= post.text %></td>
+              </tr>  
+              <tr>
+                <td><a href="/answers/new"><input type="button" value="Reply"></a>
+                <button type='button' id='like-button'> Like </button>
+                                          <td id="likes">
+                                          </td>
+              </tr>
+                   <% end %>
+             </div>
+        </table>
+
+  
         </div>
       </div>
-</div>
 
-<div class="row">
-  <div class="col-md-6">
-        <table id="post-comments">
+      </div>
+  </div>
+
+      <table id="post-comments">
         <tr>
           <%= form_for :post, url: posts_path do |f| %>
 
@@ -70,14 +76,15 @@
                   </p>
               </td>
             </tr>
-              <table>
-          </div>
-          </div>
-          <% end %>
-        </div>
-       </div> 
-      </div>
-  </div>
+
+             <% end %>
+              <table>    
+</article>
+
+<div id="pager-edit">
+  <ul class="pager">
+        <li><a href="/home">Back</a></li> 
+   </ul>
 </div>
 
     <script type="text/javascript">
