--- a/app/views/students/games.html.erb
+++ b/app/views/students/games.html.erb
@@ -4,57 +4,51 @@
 </head>
 
 <body>
-		
-		<h3 id="matching-title"><img id="match-games" src="http://icons.iconarchive.com/icons/martz90/hex/256/gamehub-icon.png" height="46" width="46">Matching Game </h3>
+		<h2 id="matching-title"><img id="match-games" src="http://icons.iconarchive.com/icons/martz90/hex/256/gamehub-icon.png" height="46" width="46">Matching Game </h2>
+		<h4 id="game_instructions">Click on all the words associated to the verb</strong> <b>PLAY</b>.<p></h4>
 
-	<hr>
-			
+ <div id="matching-container">
 	<div div="word-list">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6">
 					<table>
-						<tr>
-							<h4 id="game_instructions">Click on all the words associated to the verb</strong> <b>PLAY</b>.<p></h4>
-						</tr>
-				</div>
-					<div class="row">
-						<div class="col-md-6">
-						<div id="score-table">
-							<tr>
-							<th id="score"> YOUR SCORE </th><td>
-									<div id="output">0
-									</div>
-									</td>
-								</tr>
+					</div>
+						<div class="row">
+							<div class="col-md-6">
+							<div id="score-table">
+								<tr>
+								<th id="score"> YOUR SCORE </th><td>
+										<div id="output">0
+										</div>
+										</td>
+									</tr>
+								</div>
 							</div>
 						</div>
-					</div>
 
-						<tr>
-							<td id="doRight1">football </td> 
-							<td id="doRight2">ball </td> 
-							<td id="doWrong1">door </td>
-							<td id="doRight3">ground </td>
-							<td id="doRight4">around </td>
-							<td id="doRight5">chess </td>
-							<td id="doRight6">music </td>
-							<td id="doWrong2">feast </td>
-							<td id="doRight7">hockey </td>
-							<td id="doRight8">the trumpet </td>
-							<td id="doRight9">the piano </td>
-					
-						</tr>
+							<tr>
+								<td id="doRight1">football </td> 
+								<td id="doRight2">ball </td> 
+								<td id="doWrong1">door </td>
+								<td id="doRight3">ground </td>
+								<td id="doRight4">around </td>
+								<td id="doRight5">chess </td>
+								<td id="doRight6">music </td>
+								<td id="doWrong2">feast </td>
+								<td id="doRight7">hockey </td>
+								<td id="doRight8">the trumpet </td>
+								<td id="doRight9">the piano </td>
+						
+							</tr>
 
-						<hr>
-
-					
 					</table>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+</div>
 
 	<script type="text/javascript">
 		$('td#doRight1, td#doRight2, td#doRight3, td#doRight4, td#doRight5, td#doRight6, td#doRight7, td#doRight8, td#doRight9').on('click', function() {
