--- a/app/views/students/media.html.erb
+++ b/app/views/students/media.html.erb
@@ -4,49 +4,45 @@
 </head>
 
 <body>
-	<h3 id="media-title"><img id="media-new" src="http://icons.iconarchive.com/icons/martz90/hex/256/poweramp-icon.png" height="46" width="46">
-	 Have fun with the latest media </h3>
+
+	<div class ="container-fluid">
+    <div class="header-img">
+      <!--<img src="/images/background.jpg" width:"1000" height:"600" class="img-responsive" alt="Responsive image">-->
+		<div>
+		
+		<h3 id="media-title"><img id="media-new" src="/images/media.png" height="46" width="46">
+		 Have fun with the latest media </h3>
+		<h4 id="media-subheader">Improve your listening comprehension with our karaoke songs, podcasts and videos </h4><br> 
+</div>
 
 	<hr>
 
-	<h4 id="media-subheader">Improve your listening comprehension with our karaoke songs, podcasts and videos </h4><br> 
+<div class="row">
 
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6">
-				<table id="spotify-table">
-					<tr>
-						<td>
-							<div id="spotify_container">
-								<iframe src="https://embed.spotify.com/?uri=spotify:user:deivymc:playlist:3bSJWrbDG4rKwURqdBVmJP" width="300" height="380" frameborder="0" allowtransparency="true"></iframe><br>
+ <div class="col-xs-6">
+ 	<h4> An image is worth a thousand words. You can remember many idioms when you think of specific situations for those expressions. Check them in our playlist! </h4>
+	<div class="embed-responsive embed-responsive-16by9">
+									<iframe class="embed-responsive-item" width="100%" height="300" src="https://www.youtube.com/embed/ZbNKTOXUVow?list=PL5146C9A4FD908B6D" frameborder="0" allowfullscreen></iframe>
+					</div>
+</div>
+
+ <div class="col-xs-6">	
+ 	<h4> The Show With No Name is a variety show that teaches English in a funny, practical, informative and energetic way. The programme uses pop culture and recent news. </h4>
+ 	<iframe src="http://www.ivoox.com/player_es_podcast_17685_1.html" width="100%" height="440" frameborder="0" allowfullscreen="0" scrolling="no" ></iframe></div>
+	</div>
+
+	  <div class="col-xs-6">	<div id="spotify_container">
+	  	<h4> Who likes to sing aloud? Let's get crazy with our favourite songs and don't forget to add new ones to our Spotify's playlist. </h4>
+
+									<iframe src="https://embed.spotify.com/?uri=spotify:user:deivymc:playlist:3bSJWrbDG4rKwURqdBVmJP" width="100%" height="360" frameborder="0" allowtransparency="true"></iframe><br>
+								</div>
 							</div>
-						</td>
-					</tr>
-				</table>
-			</div>
-
-		<div class="row">
-			<div class="col-md-6">
-				<div class="embed-responsive embed-responsive-16by9">
-								<iframe class="embed-responsive-item" width="600" height="300" style="border: 1px solid #49CBD6" src="https://www.youtube.com/embed/ZbNKTOXUVow?list=PL5146C9A4FD908B6D" frameborder="0" allowfullscreen></iframe>
-				</div>
-			</div>	
-		</div>
 	</div>
 
-			<div class="col-md-6">
-					<table id="ivoox-table">
-					<tr>
-						<td>
-							<iframe src="http://www.ivoox.com/player_es_podcast_17685_1.html" width="100%" style="border: 1px solid #49CBD6" height="440" frameborder="0" allowfullscreen="0" scrolling="no" ></iframe>
-						</td>
-					</tr>
-				</table>
-			</div>
-		</div>
-	</div>
+	 
+</div>
 
-	
+				
 		
 	</body>
 </html>
