--- a/app/views/students/tools.html.erb
+++ b/app/views/students/tools.html.erb
@@ -4,13 +4,14 @@
 </head>
 
 <body>
-  <h3 id="tools-title"> Tools </h3><br>   
+  <h3 id="tools-title"><img id="tools-logo" src="/images/tools.png" height="46" width="46"> Tools </h3><br>   
+  <h4 id="tools-subheader">Get used to some APPs </h4>
 
   <hr>
          <div id="duolingo_container">
-              <img id="duolingo-logo" src="http://icons.iconarchive.com/icons/martz90/hex/256/duolingo-icon.png" height="46" width="46">
+              <img id="duolingo-logo" src="/images/duolingo.png" height="46" width="46">
 
-              <p><strong>Discover Duolingo, an amazing and interactive way of learning English.</strong></p><br>
+              <h4><strong>Discover Duolingo, an amazing and interactive way of learning English.</strong></h4><br>
                   <ol>
                       <li><a href="https://www.duolingo.com/o$o=deivyemcee@hotmail.com&s=TEFL%20Platform"><b>Join</b> our <b>Duolingo Dashboard!</b></a></li>
 
@@ -19,9 +20,9 @@
           </div>
       
       <div id="dropbox_container">
-              <img id="dropbox-logo" src="http://icons.iconarchive.com/icons/martz90/hex/256/dropbox-icon.png" height="46" width="46">
+              <img id="dropbox-logo" src="/images/dropbox.png" height="46" width="46">
 
-              <p><strong>Browse our Dropbox, one of the best cloud servers to share our content.</strong></p><br>
+              <h4><strong>Browse our Dropbox, one of the best cloud servers to share our content.</strong></h4><br>
               <ol>
                   <li><%= link_to 'Authenticate', controller: "dropbox", action: "auth_start" %></li>        
                   <li><a href="https://www.dropbox.com/sh/ow7ekrt4w32358u/AAB8doO49mCrb8vvFhX2IKoaa?dl=0">Browse the <b>TEFL folder</b> and <b>download</b> the files you need.</a></li>
@@ -29,10 +30,16 @@
           </ol>
           <script src="https://www.dropbox.com/static/api/2/dropins.js" type="text/javascript" id="dropboxjs" data-app-key="ps8sv6wjj5v125t"></script>
           <br>
-          <p> We strongly recommend <b>'WE TEACH. WE LEARN'</b> as a guide to make your classes <b>interactive</b> and <b>learner-centered</b>.</p>
+          <h4> We strongly recommend <b>'WE TEACH. WE LEARN'</b> as a guide to make your classes <b>interactive</b> and <b>learner-centered</b>.</h4>
           
           <a href="https://www.dropbox.com/home/TEFL?preview=teachlearn.pdf" class="dropbox-saver">Save</a><br>
           <br>
+      </div>
+
+      <div id="pager-edit">
+        <ul class="pager">
+              <li><a href="/home">Back</a></li> 
+         </ul>
       </div>
   </body>
 </html>
