--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,15 @@
-<h1>Editing User</h1>
+<h2 id="student-title">Editing User</h2>
+
+<div class ="container">
+    <div class="login-img">
+      <img src="/images/top-img.jpg" width:"1200" height:"600" class="img-responsive" alt="Responsive image">
+</div>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+<div id="pager-edit">
+	<ul class="pager">
+	      <li><a href="/users">Back</a></li> 
+	 </ul>
+</div>
+
