--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,9 @@
-<h4> Please, sign up </h4><br>
+<h3 id="signup-title"> Please, sign up </h3><br>
+
+<div class ="container">
+    <div class="login-img">
+      <img src="/images/top-img.jpg" width:"1200" height:"600" class="img-responsive" alt="Responsive image">
+</div>
 
 <%= form_for @user do |f| %>
   <% if @user.errors.any? %>
