--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -5,19 +5,20 @@ html {
 }
 
 img#tefl-logo {
-   color: white; 
-   font-size: 30px; 
+   color: black; 
+   font-size: 18px; 
    font-family: Oxygen; 
-   margin-top: -8px; 
+   margin-top: auto;    
 }
 
 a.btn.btn-navbar {
-   font-size: 20px; 
-   font-family: Oxygen, sans-serif; 
+   font-size: 18px; 
+   font-family: Oxygen; 
    margin-top: -10px; 
 }
 
 nav.navbar {
+
    position: fixed; 
    top: 0; 
    left: 0; 
@@ -25,23 +26,42 @@ nav.navbar {
    height: 60px;  
    background-color: #49CBD6;  
    padding: 10px;
+    box-shadow: 0 0 1em black;
 }
 
-nav#log_container {
+nav#log_container, ul.pager {
+  
   font-family: Oxygen; 
   margin-left: 30px; 
   padding-top: 20px; 
   padding-bottom: 10px; 
 }
 
-h3.session-title {
-   color: white; 
+div#pager-edit {
+   margin-left: 45%; 
+}
+
+.navbar-brand:hover {
+ background: #EEEEEE;
+}
+
+h3.session-title, h3#signup-title {
+   font-size: 35px; 
+   font-family: Oxygen; 
+   color: black; 
+   margin-left: 40%; 
+}
+
+h3#feedback-title {
+   margin-left: 43%; 
 }
 
 form{
-  position: center; 
+  position: relative; 
   width: 50%;
   margin: 10px; 
+  margin-left: auto; 
+  margin-right: auto; 
   padding: 20px; 
   padding-top: 35px; 
   text-align: center;
@@ -54,8 +74,8 @@ img.img-responsive {
    top: 0; 
    left: 0; 
    position: fixed; z-index: -1;
-   width: 200%;
-   height: 300px; 
+   width: 100%;
+   height: 600px; 
 }
 
 .login-img {
@@ -70,7 +90,8 @@ img.img-responsive {
 
 h1#platform-name {  
    text-align: center; 
-   margin-top: -15%;
+   color: #49CBD6;
+   margin-top: 5px; 
    margin-left: 10%; 
    margin-right: 10%;
    padding:10px; 
@@ -85,7 +106,6 @@ p.motto {
    padding-bottom: 10px; 
    font-family: Oxygen; 
    font-size: 25px; 
-   color: white; 
 }
 
 h3.recent-posts-header {
@@ -93,11 +113,15 @@ h3.recent-posts-header {
 }
 
 button#like-button {  
-   background-color: #49CBD6;
+   font-style: Oxygen; 
 }
 
 h3#latest_post, h3#latest_feedback{
    padding: 10px;
+}
+
+h4#post-title {
+   margin-right: 100%;
 }
 
 table#post-comments {
@@ -107,6 +131,12 @@ table#post-comments {
    background-color: #49CBD6;
     box-shadow: 0 0 1em black;
    border-radius: 20px 20px 20px 20px; 
+}
+
+div.fb-comments {
+   position: relative;
+   margin-left: 25%;
+   margin-bottom: 10%
 }
 
 body { 
@@ -119,21 +149,13 @@ body {
    margin-bottom: 10%; 
 } 
 
-span > a {
-   font-style: georgia; 
-   font-size: 14px;
-   text-align: auto;  
-   color: black; 
-}
-
-
-#like-button {
+#like-button, #reply-button {
    padding: 4px; 
    margin-left: 50px; 
-   box-shadow: 0 0 1em black;
-   border-radius: 20px 20px 20px 20px;
+  
    margin: 4px;
    font-size: 14px; 
+   font-style: Oxygen; 
 }
 
 /*Posts, comments & feedback CSS*/
@@ -145,13 +167,9 @@ table#posts {
    border-radius: 20px 30px 30px 20px;
 }
 
-
-h3#post-title {
+h2#post-title {
    width: 50%; 
    text-align: center; 
-   background-color: #49CBD6;  
-   box-shadow: 0 0 1em black;
-   border-radius: 20px 20px 20px 20px; 
    padding: 3px; 
    margin-top: 10px; 
    margin-left: 300px;
@@ -160,6 +178,8 @@ h3#post-title {
 
 div#posts-content {
    margin: 10px;
+   font-style: Oxygen; 
+   font-size: 16px; 
 }
 
 ul.pager {
@@ -181,21 +201,32 @@ div#comments-content {
 
 /* Headers & Titles */
 
-h1#students-wall, h3#matching-title, h1#student-title, h3#media-title, h3#post-title, h3#title-tutor, h2#teachers-title  {
+h1#students-wall, h2#matching-title, h3#media-title, h3#post-title, h2#title-tutor, h2#teachers-title, h3#tools-title, h1#tutors-title, h4#teachers-title  {
+   
    width: 50%; 
+   font-style: Oxygen; 
+   font-size: 30px; 
    text-align: center; 
-   background-color: #49CBD6;  
-   box-shadow: 0 0 1em black;
-   border-radius: 20px 20px 20px 20px; 
    padding: 3px; 
-   margin-top: 10px; 
    margin-left: 250px;  
+}
+
+h2#student-title {
+   
+   margin-left: 45%;
+   
 }
 
 /* Game CSS */
 
+img#match-games {
+   margin-top: -10px;
+   margin: 10px;
+}
+
 h4#game_instructions {
    text-align: center; 
+   font-style: Oxygen; 
 }
 
 td#doRight,td#doWrong {
@@ -205,27 +236,36 @@ td#doRight,td#doWrong {
 
 /*Tools CSS*/
 
-h3#tools-title {
-   width: 50%; 
-   text-align: center; 
-   background-color: #49CBD6;  
-   box-shadow: 0 0 1em black;
-   border-radius: 20px 20px 20px 20px; 
-   padding: 10px; 
-   margin-top: 10px; 
-   margin-left: 250px;  
-}
-
 img#duolingo-logo {
    margin-bottom: 15px; 
    float: center; 
 }
 
+div#duolingo_container > ol {
+     font-size: 16px; 
+}
+
+div#dropbox_container > ol {
+   font-size: 16px; 
+}
+
+div#matching-container {
+    font-style: Oxygen; 
+   text-align: center; 
+   margin: 10px;
+   box-shadow: 0 0 1em black;
+   padding: 25px;
+   margin: 10px;
+   border-radius: 20px 30px 30px 20px;
+}
+
 div#duolingo_container  {
+   font-style: Oxygen; 
    text-align: center; 
    margin: 10px;
    box-shadow: 0 0 2em green;
-   padding: 25px; 
+   padding: 25px;
+   margin: 10px;
    border-radius: 20px 30px 30px 20px;
 }
 
@@ -246,28 +286,37 @@ div#dropbox_container  {
 
 h3#title, h3#media-title, h3#post-title { 
    width: 50%; 
-   margin-left: 5px;
-   background-color: #49CBD6;  
-   box-shadow: 0 0 1em black;
-   border-radius: 20px 20px 20px 20px; 
+   font-family: Oxygen; 
+   font-size: 30px; 
+   
 }
 
-h4#media-subheader {
-   padding: 20px; 
+h4#media-subheader, h4#tools-subheader {
+   text-align: center; 
+   margin-top: -10px; 
 }
 
 img#media-new {
    margin-top: -3px; 
 }
 
+#ivoox-table {
+   margin-left: -15px; 
+}
+
 iframe {
+   margin-top: 50px; 
    position: relative; 
    
 }
 
+div#spotify-container {
+   margin-bottom: 20px; 
+}
+
 /*Teacher & Tutor CSS*/ 
 
-h3#teachers-title2 {
+h4#teachers-title2 {
    width: 50%; 
    text-align: center; 
    padding: 3px; 
@@ -279,15 +328,19 @@ div#issuu-reading {
    border-radius: 20px 20px 20px 20px; 
    padding: 10px; 
    margin-left: 25%;
-   margin-right: 25%;
    margin-top: 2%; 
+}
+
+div.management-links {
+   margin-left: 25%; 
 }
 
 table#tutor-feedback, table#tutor-table {
    margin: 20px; 
 }
 
-span#contact-tutor-header {
+div.contact-info {
+   align-content: center; 
    display: inline; 
 }
 
@@ -318,7 +371,7 @@ div#word-list {
 /*Links CSS */
 
 div#home-link {
-   margin-left: 350px;
+   margin-left: 375px;
 }
 
 div#back_link {
@@ -328,3 +381,15 @@ div#back_link {
 p.navbar-text {
    text-align: center; 
 }
+
+footer.fixed-bottom {
+    position: fixed;
+    background-color: #CCCCB2;
+    text-align: center; 
+    height: 20px;
+    right: 0;
+    left: 0; 
+    bottom: 0;
+    width: 100%; 
+}
+   
