--- a/app/views/answers/index.html.erb
+++ b/app/views/answers/index.html.erb
@@ -27,7 +27,7 @@
                 <td><%= answer.text %></td>
               </tr>  
               <tr>
-                <td><a href="/answers/new"><input type="button" value="Reply"></a>
+               <td><a href="/answers/new"><input type="button" value="Reply" id="reply-button"></a>
                 <button type='button' id='like-button'> Like </button>
                                           <td id="likes">
                                           </td>
