--- a/app/views/students/contact.html.erb
+++ b/app/views/students/contact.html.erb
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-    <h2 id="title-tutor"><img id= "contact-tutor" src="/images/email.png" height="46" width="46"> Contact your teacher </h2> 
+    <h2 id="title-tutor"><img id= "contact-tutor" src="/images/email.png" height="46" width="46"> Contact your teacher/guide </h2> 
 
   <hr>
 
