--- a/app/views/students/games.html.erb
+++ b/app/views/students/games.html.erb
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-		<h2 id="matching-title"><img id="match-games" src="http://icons.iconarchive.com/icons/martz90/hex/256/gamehub-icon.png" height="46" width="46">Matching Game </h2>
+		<h2 id="matching-title"><img id="match-games" src="/images/games.png" height="46" width="46">Matching Game </h2>
 		<h4 id="game_instructions">Click on all the words associated to the verb</strong> <b>PLAY</b>.<p></h4>
 
  <div id="matching-container">
