--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -6,7 +6,7 @@
 <body>
 	
 <span id="student-header">
-	<h2 id="student-title"><img id="student-header" src="/images/students.png" height="46" width="46"> Your Class </h2>
+	<h2 id="student-title"><img id="student-header" src="/images/students.png" height="46" width="46"> Your Team </h2>
 </span>
 
 <hr>
