--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,11 +1,11 @@
 
 <div id="teachers-header">	
-	<h2 id="teachers-title"><img id="teachers" src="/images/teachers.png" height="46" width="46">  Teachers' Index </h2> <h4 id="teachers-title2">Teacher training and management of your class</h4>
+	<h2 id="teachers-title"><img id="teachers" src="/images/teachers.png" height="46" width="46">  Teachers' Index </h2> <h4 id="teachers-title2">Teacher training and management of your team</h4>
 </div>
 
 <div class="management-links">
 	<ul class="pager">
-	    <li><a href="/tutors">Class Interaction</a></li>
+	    <li><a href="/tutors">Team Interaction</a></li>
 			<li><a href="/duolingo/dashboard">Duolingo Dashboard</a></li>
 			<li><a href="/busyteacher">Find your Worksheet</a></li>
 	<ul>
