last navbar edit & bootstrap fixes

--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -29,17 +29,13 @@
 							</div>
 					</div>
 
-<script type="text/javascript">
+<script type="text/javascript" src="/assets/posts.js"></script>
 
-	$('button#like-button').on('click', function() {
-		alert('Thanks for your support!');
-	});
-
-/* Contador de likes para cada comentario y post
+<!--* Contador de likes para cada comentario y post
 
 	$('button#like-button').on('click', function() {
 	    $('#likes').html(function(i, val) { return val*1+1 });
 	});
-*/
+-->
 
 </script>
