--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,18 +1,11 @@
 /*Home CSS*/
 
-
-
-
-
-
-
-
-
 html {
    height: 100%; 
 }
 
 img#tefl-logo {
+   position: relative;
    color: black; 
    font-size: 18px; 
    font-family: Oxygen; 
@@ -20,33 +13,39 @@ img#tefl-logo {
 }
 
 a.btn.btn-navbar {
-   position: relative; 
+   position: relative;
+   float: auto; 
    font-size: 14px; 
-   font-family: Oxygen; 
-   margin-top: -5px; 
+   font-family: Oxygen;
+   margin-top: -30px;   
 }
 
 nav.navbar { 
    position: fixed; 
    top: 0; 
    left: 0; 
+   margin: 0;
    width: 100%; 
-   height: 60px;  
+   height: 80px;  
    background-color: #49CBD6;  
    padding: 10px;
    box-shadow: 0 0 1em grey;
 }
 
+div.nav_container {
+   position: relative;
+}
+
 span#log_container  {
-  position: relative; 
   font-family: Oxygen; 
-  margin-left: -30px; 
   padding-top: 20px; 
-  padding-bottom: 10px; 
+  padding-bottom: 40px; 
+  overflow: hidden;
 }
 
 ul.pager {
-   margin-left: -70px
+float: left; 
+   padding: 10px; 
    
 }
 
@@ -69,6 +68,7 @@ h3.session-title, h3#signup-title {
    font-size: 35px; 
    font-family: Oxygen; 
    color: black; 
+   margin-top: 15%; 
    margin-left: 35%; 
 }
 
@@ -82,8 +82,8 @@ form{
   margin: 10px; 
   margin-left: auto; 
   margin-right: auto; 
-  padding: 20px; 
-  padding-top: 35px; 
+  padding: 5%; 
+  padding-top: 5%; 
   text-align: center;
   background-color: #49CBD6; 
   box-shadow: 0 0 1em black;
@@ -111,7 +111,7 @@ img.img-responsive {
 h3#platform-name {  
    text-align: center; 
    color: #49CBD6;
-   margin-top: 0px; 
+   margin-top: 5%; 
    margin-left: 10%; 
    margin-right: 10%;
    font-family: Oxygen; 
@@ -206,10 +206,6 @@ div#posts-content {
    font-size: 16px; 
 }
 
-ul.pager {
-   text-align: auto; 
-}
-
 table#post-comments {
    width: 50%; 
    margin-left: 150px; 
@@ -233,7 +229,7 @@ h1#students-wall, h2#matching-title, h3#media-title, h3#post-title, h2#title-tut
    text-align: center; 
    padding: 3px; 
    margin-left: 25%;  
-   margin-top: 0px;
+   margin-top: 10%;
 }
 
 h2#student-title {
@@ -407,7 +403,7 @@ p.navbar-text {
    text-align: center; 
 }
 
-footer.fixed-bottom {
+footer.clearfix {
     position: fixed;
     background-color: #CCCCB2;
     text-align: center; 
@@ -417,4 +413,24 @@ footer.fixed-bottom {
     bottom: 0;
     width: 100%; 
 }
+
+/** Diseño para tabletas **/
+
+@media only screen and (max-width: 768px){
+   body {
+      margin:15px;
+   }
+
+   .navbar-fixed-top {
+      height: 50px;
+   }
    
+   h3#platform-name {
+      margin-top: 15%;
+   }
+   
+   .btn-navbar {
+       float: right;  
+   }
+}
+
