--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,26 +2,49 @@
 <html>
 <head>
   <title>Tefl Hiking</title>
-  <link rel="stylesheet" type="text/css" href="home.css">
-  <link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <meta charset="utf-8">
+  <meta content="width=640px" name="viewport">
 
+  <link src="assets/stylesheets/bootstrap-css" rel="stylesheet" type="text/css" media="all">
+  <link href="http://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+
+  <script type="text/javascript" src="/assets/games.js"></script>   
+  <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+  <script type="text/javascript" src="http://www.skypeassets.com/i/scom/js/skype-uri.js"></script>
+  
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application'=> true %>
   <%= csrf_meta_tags %>
 </head>
 
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
+    <nav class="navbar navbar-default navbar-fixed-top role=navigation">
+      <div class="nav_container">
 
+      <div class="sb-toggle-left"></div>
         <ul>
-                <div class="navbar-header">
                   <a class="navbar-brand" href="/home">
-                    <img id="tefl-logo" alt="TEFL" width="36" height="36" src="/images/tefl_logo.jpg">
+                    <img id="tefl-logo" alt="TEFL" width="46" height="46" src="/images/tefl_logo.jpg">
                   </a>
               </div>
         </ul>
+
+           <span id="log_container">  
+              <% if current_user %> 
+              Logged in as <%= current_user.email %><br>
+              <%= link_to "Edit Profile", edit_user_path(current_user.id) %> |
+              <%= link_to "Log out", :logout, method: :post %>
+              <% else %>
+              <%= link_to "Sign up", signup_path %>
+              or
+            <%= link_to "Log in", login_path %>
+              </span>
+              <% end %>   
+              <% flash.each do |name, msg| %> 
+              <%= content_tag :div, msg, :id => "flash#name" %>
+              <% end %>
+            </span>
+      </div>
 
             <ul class="nav nav-pills pull-right">
                         </li>
@@ -50,58 +73,27 @@
                     </li>
 
                    <li role="presentation"><span id="posts-link">
-                      </span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="/posts">POSTS</a>
+                      </span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="/posts">BLOG</a>
                       </li>
 
                     <li role="presentation"><span id="contact-link">
                       </span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="contact">CONTACT</a>
                       </li>
                     </ul>
-                  </nav>
+                    
                 </div>
-
-                  <nav id="log-container">
-                      <span id="log_container">
-                              <div class="container">
-                                <% if current_user %> 
-                                Logged in as <%= current_user.email %><br>
-                                 <%= link_to "Edit Profile", edit_user_path(current_user.id) %> |
-                                 <%= link_to "Log out", :logout, method: :post %>
-                                <% else %>
-                                  <%= link_to "Sign up", signup_path %>
-                                  or
-                                 <%= link_to "Log in", login_path %>
-                               </div>
-                              </span>
-                            <% end %>                      
-                        <span id="log_container">
-                              <% flash.each do |name, msg| %> 
-                              <%= content_tag :div, msg, :id => "flash#name" %>
-                               <% end %>
-                        </span>
-                    </nav>
-                </nav>
-              </div>
-            
-      </div>
-    </div>
-
+              </nav>
+                    
 <body>
-     
-	<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-  <script type="text/javascript" src="http://www.skypeassets.com/i/scom/js/skype-uri.js"></script>
-	
-  <!-- 
-  <script type="text/javascript" src="posts.js"></script>
-	<script type="text/javascript" src="games.js"></script>
-  -->
-
+       
 <%= yield %>
 </body>
 
-<div class="container">
-  <div id="wrap">
-  <footer class="fixed-bottom">® TEFL, 2015</footer>
+<nav>
+  <div class="container">
+    <div id="wrap">
+    <footer class="clearfix">® TEFL, 2015</footer>
+    </div>
   </div>
-</div>
+</nav>
 </html>
