--- a/app/views/students/comments.html.erb
+++ b/app/views/students/comments.html.erb
@@ -1,4 +1,4 @@
-<h1> Students Comments on the Platform (Feedback) </h1>
+<h1> Students' Comments on the Platform (Feedback) </h1>
 
 <p>
   <strong>Title:</strong>
