--- a/app/views/students/games.html.erb
+++ b/app/views/students/games.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 </head>
 
 <body>
@@ -50,63 +51,7 @@
 	</div>
 </div>
 
-	<script type="text/javascript">
-		$('td#doRight1, td#doRight2, td#doRight3, td#doRight4, td#doRight5, td#doRight6, td#doRight7, td#doRight8, td#doRight9').on('click', function() {
-		    $('#output').html(function(i, val) { return val*1+1 });
-		});
-
-		$('td#doRight1, td#doRight2, td#doRight3, td#doRight4, td#doRight5, td#doRight6, td#doRight7, td#doRight8, td#doRight9').on('click', function() {
-			alert('Correct!');
-		});
-
-		$('td#doWrong1, td#doWrong2').on('click', function() {
-			alert('Wrong!');	
-		});
-
-		$('td#doRight1').on('click', function() {
-			$('td#doRight1').css('background-color', 'rgb(73,203,214)');
-		});
-
-		$('td#doRight2').on('click', function() {
-			$('td#doRight2').css('background-color', 'rgb(73,203,214)');
-		});
-
-		$('td#doRight3').on('click', function() {
-			$('td#doRight3').css('background-color', 'rgb(73,203,214)');
-		});
-
-		$('td#doRight4').on('click', function() {
-			$('td#doRight4').css('background-color', 'rgb(73,203,214)');
-		});
-
-		$('td#doRight5').on('click', function() {
-			$('td#doRight5').css('background-color', 'rgb(73,203,214)');
-		});
-
-		$('td#doRight6').on('click', function() {
-			$('td#doRight6').css('background-color', 'rgb(73,203,214)');
-		});
-
-		$('td#doRight7').on('click', function() {
-			$('td#doRight7').css('background-color', 'rgb(73,203,214)');
-		});
-
-		$('td#doRight8').on('click', function() {
-			$('td#doRight8').css('background-color', 'rgb(73,203,214)');
-		});
-
-		$('td#doRight9').on('click', function() {
-			$('td#doRight9').css('background-color', 'rgb(73,203,214)');
-		});
-
-		$('td#doWrong1').on('click', function() {
-			$('td#doWrong1').css('background-color', '#D11B1B');
-		});
-
-		$('td#doWrong2').on('click', function() {
-			$('td#doWrong2').css('background-color', '#D11B1B');
-		});
-
+<script type="text/javascript" src="assets/games.js">		
 	</script>
 </body>
 </html>
