--- a/app/views/students/home.html.erb
+++ b/app/views/students/home.html.erb
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-</head>
-
-<body>
-
   <div id="fb-root"></div>
     <script>(function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
@@ -14,11 +10,14 @@
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
     </script>
+</head>
+
+<body>
 
 <div class="container">
           <h3 id="platform-name">TEFL Hiking</h3> <br>
    <p class="motto">Lighten your backpack, learn English on the go.</p>
-<div>
+</div>
 
 <hr>
 
@@ -76,17 +75,11 @@
       </div>
 </div>
 
-
-
 <div class="fb-comments" data-href="http://localhost:3000/home" data-numposts="5"></div>
 
 </article>
 
-	 <script type="text/javascript">
-
-        $('button#like-button').on('click', function() {
-          alert('Thanks for your support!');
-        });
+  <script type="text/javascript" src="assets/posts">
     </script>
 </body>
 </html>
