--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,94 +5,95 @@
   <meta charset="utf-8">
   <meta content="width=640px" name="viewport">
 
-  <link src="assets/stylesheets/bootstrap-css" rel="stylesheet" type="text/css" media="all">
-  <link href="http://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Oxygen">
+  <link rel="stylesheet" type="text/css" href="/bootstrap.css">
+  <link rel="stylesheet" type"text/css" href="assets/stylesheets/home.css">
 
   <script type="text/javascript" src="/assets/games.js"></script>   
   <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
   <script type="text/javascript" src="http://www.skypeassets.com/i/scom/js/skype-uri.js"></script>
   
-  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <!--Error en la l.17 relacionado con SASS Y answers.scss-->
+  <%= stylesheet_link_tag 'application' => true, media: 'all' %>
   <%= javascript_include_tag 'application'=> true %>
   <%= csrf_meta_tags %>
 </head>
 
-    <nav class="navbar navbar-default navbar-fixed-top role=navigation">
-      <div class="nav_container">
+<nav class="navbar navbar-default navbar-fixed-top role=navigation">
+  <div class="nav_container">
 
-      <div class="sb-toggle-left"></div>
-        <ul>
-                  <a class="navbar-brand" href="/home">
-                    <img id="tefl-logo" alt="TEFL" width="46" height="46" src="/images/tefl_logo.jpg">
-                  </a>
-              </div>
-        </ul>
+    <div class="sb-toggle-left"></div>
+    <ul>
+      <a class="navbar-brand" href="/home">
+        <img id="tefl-logo" alt="TEFL" width="46" height="46" src="/images/tefl_logo.jpg">
+      </a>
+    </div>
+  </ul>
 
-           <span id="log_container">  
-              <% if current_user %> 
-              Logged in as <%= current_user.email %><br>
-              <%= link_to "Edit Profile", edit_user_path(current_user.id) %> |
-              <%= link_to "Log out", :logout, method: :post %>
-              <% else %>
-              <%= link_to "Sign up", signup_path %>
-              or
-            <%= link_to "Log in", login_path %>
-              </span>
-              <% end %>   
-              <% flash.each do |name, msg| %> 
-              <%= content_tag :div, msg, :id => "flash#name" %>
-              <% end %>
-            </span>
-      </div>
+  <span id="log_container">  
+    <% if current_user %> 
+    Logged in as <%= current_user.email %><br>
+    <%= link_to "Edit Profile", edit_user_path(current_user.id) %> |
+    <%= link_to "Log out", :logout, method: :post %>
+    <% else %>
+    <%= link_to "Sign up", signup_path %>
+    or
+    <%= link_to "Log in", login_path %>
+  </span>
+  <% end %>   
+  <% flash.each do |name, msg| %> 
+  <%= content_tag :div, msg, :id => "flash#name" %>
+  <% end %>
+</span>
+</div>
 
-            <ul class="nav nav-pills pull-right">
-                        </li>
+<ul class="nav nav-pills pull-right">
+</li>
 
-                 <li role="presentation"> <span id="home-link">
-                          </span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="/home">HOME</a>
-                        </li>
+<li role="presentation"> <span id="home-link">
+</span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="/home">HOME</a>
+</li>
 
-                <li role="presentation"> <span id="teachers-link">
-                          </span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="/teachers">TEACHERS</a>
-                        </li>
+<li role="presentation"> <span id="teachers-link">
+</span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="/teachers">TEACHERS</a>
+</li>
 
-                <li role="presentation"><span id="student-link">
-                        </span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="/students">STUDENTS</a>
-                      </li>
-            
-                <li role="presentation"><span id="tools-link">
-                        </span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="/tools">TOOLS</a>
-                      </li>
-                        
-                 <li role="presentation"><span id="games-link">
-                      </span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="/games">GAMES</a>
-                    </li>
-                  <li role="presentation"><span id="media-link">
-                      </span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="/media">MEDIA</a>
-                    </li>
+<li role="presentation"><span id="student-link">
+</span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="/students">STUDENTS</a>
+</li>
 
-                   <li role="presentation"><span id="posts-link">
-                      </span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="/posts">BLOG</a>
-                      </li>
+<li role="presentation"><span id="tools-link">
+</span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="/tools">TOOLS</a>
+</li>
 
-                    <li role="presentation"><span id="contact-link">
-                      </span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="contact">CONTACT</a>
-                      </li>
-                    </ul>
-                    
-                </div>
-              </nav>
-                    
+<li role="presentation"><span id="games-link">
+</span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="/games">GAMES</a>
+</li>
+<li role="presentation"><span id="media-link">
+</span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="/media">MEDIA</a>
+</li>
+
+<li role="presentation"><span id="posts-link">
+</span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="/posts">BLOG</a>
+</li>
+
+<li role="presentation"><span id="contact-link">
+</span><a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse" href="contact">CONTACT</a>
+</li>
+</ul>
+
+</div>
+</nav>
+
 <body>
-       
-<%= yield %>
+ 
+  <%= yield %>
 </body>
 
 <nav>
   <div class="container">
     <div id="wrap">
-    <footer class="clearfix">® TEFL, 2015</footer>
+      <footer class="clearfix">® TEFL, 2015</footer>
     </div>
   </div>
 </nav>
